--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
   http: ^1.2.1
   geolocator: ^11.0.0
   geocoding: ^3.0.0
@@ -35,8 +37,9 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: ^6.1.0
   intl: ^0.18.1
-  flutter:
-    sdk: flutter
+  connectivity_plus: ^6.1.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
