--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_debouncer: ^2.0.0
   flutter:
     sdk: flutter
+  firebase_core: ^2.30.0
+  firebase_messaging: ^14.7.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
