--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   google_fonts: ^6.1.0
   intl: ^0.18.1
   flutter_debouncer: ^2.0.0
+  provider: ^6.1.1
+  fl_chart: ^0.66.0
+  syncfusion_flutter_charts: ^29.2.10
   flutter:
     sdk: flutter
 
