--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.1.1
   fl_chart: ^0.66.0
   syncfusion_flutter_charts: ^29.2.10
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
   flutter:
     sdk: flutter
 
